--- a/app/src/main/res/layout/fragment_credits.xml
+++ b/app/src/main/res/layout/fragment_credits.xml
@@ -2,10 +2,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     tools:context=".MainActivity"
     android:background="@android:color/white">
 
-    <!-- TODO: Update blank fragment layout -->
 
     <ImageView
         android:layout_width="wrap_content"
@@ -15,5 +15,17 @@
         android:src="@drawable/wa"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="130dp" />
+        android:layout_marginTop="50dp" />
+
+    <LinearLayout
+        android:id="@+id/layout"
+        android:background="#191919"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true">
+
+    </LinearLayout>
+
 </RelativeLayout>
