--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -42,7 +42,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         >
 
         <TextView
@@ -60,7 +60,6 @@
             android:paddingTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/fab_margin"
             fab:menu_fab_label="Share"
             fab:menu_icon="@drawable/ic_share_white_24dp"
             fab:menu_labels_style="@style/MenuLabelsStyle"
@@ -69,14 +68,16 @@
             fab:menu_animationDelayPerItem="0"
             fab:menu_backgroundColor="#ccffffff"
             fab:menu_shadowColor="#444"
-            fab:menu_labels_showShadow="true">
+            fab:menu_labels_showShadow="true"
+            android:layout_margin="@dimen/fab_margin"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentTop="true">
 
             <com.github.clans.fab.FloatingActionButton
                 android:id="@+id/tw"
                 android:layout_width="wrap_content"
                 android:layout_gravity="bottom|end"
                 fab:fab_label="Twitter"
-
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_twitter"
                 />
