--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,104 +2,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:fab="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/lin_lay"
     android:weightSum="1"
     android:orientation="vertical"
     android:background="@color/white"
     tools:context=".MainActivity">
-
-    <RelativeLayout
+    <FrameLayout
         android:layout_width="match_parent"
-        android:background="@color/colorPrimary"
-        android:layout_height="wrap_content"
-        android:elevation="4dp">
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_aaruush_logo"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/alogo"
-        android:layout_marginTop="15dp"
-        android:layout_gravity="center"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="AARUUSH"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/txt_name"
-        android:layout_below="@id/alogo"
-        android:layout_gravity="center"
-        android:textColor="@color/white"
-        android:visibility="invisible"
-        android:textSize="26sp"/>
-
-
-    </RelativeLayout>
-
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
-
-        <TextView
-            android:padding="16dp"
-            android:id="@+id/disc"
-            android:text="@string/desc"
+        android:layout_height="wrap_content">
+        <ImageView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:textSize="15sp"
-            />
+            android:layout_height="200dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/background"/>
+        <com.mikhaellopez.circularimageview.CircularImageView
+            android:layout_gravity="center"
+            android:layout_margin="16dp"
+            android:id="@+id/profileImage"
+            android:scaleType="centerCrop"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/placeholder"
+            app:civ_border_color="#ff8018"
+            app:civ_border_width="4dp"/>
+    </FrameLayout>
 
-        <com.github.clans.fab.FloatingActionMenu
-            android:id="@+id/menu"
-            android:paddingTop="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            fab:menu_fab_label="Share"
-            fab:menu_icon="@drawable/ic_share_white_24dp"
-            fab:menu_labels_style="@style/MenuLabelsStyle"
-            fab:menu_labels_showAnimation="@anim/jump_from_down"
-            fab:menu_labels_hideAnimation="@anim/jump_to_down"
-            fab:menu_animationDelayPerItem="0"
-            fab:menu_backgroundColor="#ccffffff"
-            fab:menu_shadowColor="#444"
-            fab:menu_labels_showShadow="true"
-            android:layout_margin="@dimen/fab_margin"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentTop="true">
 
-            <com.github.clans.fab.FloatingActionButton
-                android:id="@+id/tw"
-                android:layout_width="wrap_content"
-                android:layout_gravity="bottom|end"
-                fab:fab_label="Twitter"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_twitter"
-                />
-
-            <com.github.clans.fab.FloatingActionButton
-                android:id="@+id/wa"
-                android:layout_width="wrap_content"
-                android:layout_gravity="bottom|end"
-                fab:fab_label="WhatsApp"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_whatsapp"
-                />
-
-            <com.github.clans.fab.FloatingActionButton
-                android:id="@+id/fb"
-                android:layout_width="wrap_content"
-                android:layout_gravity="bottom|end"
-                fab:fab_label="Facebook"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_fb"
-                />
-        </com.github.clans.fab.FloatingActionMenu>
-
-    </RelativeLayout>
 </LinearLayout>
