--- a/app/src/main/res/layout/fragment_domain.xml
+++ b/app/src/main/res/layout/fragment_domain.xml
@@ -1,10 +1,11 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MainActivity"
-    android:background="@android:color/white">
+    android:background="@android:color/white"
+    android:id="@+id/swipelayout">
 
     <com.github.florent37.materialviewpager.MaterialViewPager
         android:id="@+id/materialViewPager"
@@ -28,4 +29,4 @@
 
         />
 
-</RelativeLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
