--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -8,8 +8,7 @@
     tools:context="com.aaruush16.webarch.aaruush16.Firebase.LoginActivity"
     tools:showIn="@layout/activity_login"
     android:background="@drawable/bg_signin"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
     <ImageView
         android:layout_margin="20dp"
         android:id="@+id/ivLogo"
