--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -56,15 +56,16 @@
     </style>
 
     <style name="CollapsedAppBar" parent="@android:style/TextAppearance.Medium">
+        <item name="android:background">@color/white</item>
         <item name="android:textSize">24sp</item>
         <item name="android:textColor">@color/Indigo</item>
-        <item name="android:textStyle">normal</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
     <style name="ExpandedAppBar" parent="@android:style/TextAppearance.Large">
         <item name="android:textSize">28sp</item>
         <item name="android:textColor">@color/DarkBlue</item>
-        <item name="android:textStyle">normal</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
 
