--- a/app/src/main/res/layout/fragment_favourites.xml
+++ b/app/src/main/res/layout/fragment_favourites.xml
@@ -5,14 +5,11 @@
     tools:context=".MainActivity"
     android:background="@android:color/white">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Favourites"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:layout_gravity="center"
-        android:gravity="center"/>
+        tools:context="com.aaruush16.webarch.aaruush16.DomainFragment.DomainPagerFragment"
+        android:id="@+id/list_event_fav"
+        />
 
 </FrameLayout>
