--- a/app/src/main/res/layout/fragment_workshops.xml
+++ b/app/src/main/res/layout/fragment_workshops.xml
@@ -1,8 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -16,123 +12,11 @@
     android:paddingTop="@dimen/activity_vertical_margin"
   >
 
-    <com.ramotion.foldingcell.FoldingCell xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:folding-cell="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/folding_cell"
+    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        folding-cell:backSideColor="@color/white"
-        folding-cell:additionalFlipsCount="1"
-        android:layout_height="wrap_content">
-
-        <FrameLayout
-            android:id="@+id/cell_content_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:background="@color/DarkBlue"
-            android:visibility="gone">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="250dp"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/white"
-                    android:textAppearance="?android:textAppearanceLarge"
-                    android:text="Description: "
-                    />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/white"
-                    android:textAppearance="?android:textAppearanceMedium"
-                    android:id="@+id/desc"
-                    />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/white"
-                    android:textAppearance="?android:textAppearanceLarge"
-                    android:text="Cost: "
-                    />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/white"
-                    android:textAppearance="?android:textAppearanceMedium"
-                    android:id="@+id/cost"
-                    />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/white"
-                    android:textAppearance="?android:textAppearanceLarge"
-                    android:text="Contact: "
-                    />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/white"
-                    android:textAppearance="?android:textAppearanceMedium"
-                    android:id="@+id/contact"
-                    />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/white"
-                    android:textAppearance="?android:textAppearanceMedium"
-                    android:id="@+id/team"
-                    />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/white"
-                    android:textAppearance="?android:textAppearanceMedium"
-                    android:id="@+id/date_time"
-                    />
-            </LinearLayout>
-        </FrameLayout>
-
-        <FrameLayout
-            android:id="@+id/cell_title_view"
-            android:layout_width="match_parent"
-            android:padding="10dp"
-            android:background="@color/DarkBlue"
-            android:layout_height="wrap_content">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                >
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/about_us"
-                    />
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="100dp"
-                    android:text="This is the title of the event"
-                    android:id="@+id/title"
-                    android:textColor="@color/white"
-                    />
-            </LinearLayout>
-
-        </FrameLayout>
-
-    </com.ramotion.foldingcell.FoldingCell>
-
-
+        android:layout_height="match_parent"
+        android:id="@+id/list_workshop"
+        />
 
 </LinearLayout>
-</ScrollView>
