--- a/app/src/main/res/layout/workshop_list_item.xml
+++ b/app/src/main/res/layout/workshop_list_item.xml
@@ -4,24 +4,21 @@
     android:id="@+id/folding_cell"
     android:layout_width="match_parent"
     folding-cell:backSideColor="@color/white"
-    folding-cell:additionalFlipsCount="1"
     android:layout_height="wrap_content"
     android:layout_margin="5dp">
+
 
     <FrameLayout
         android:id="@+id/cell_content_view"
         android:layout_width="match_parent"
+        android:minHeight="250dp"
         android:layout_height="wrap_content"
         android:padding="10dp"
         android:background="@color/DarkBlue"
         android:visibility="gone">
-        <android.support.v4.widget.NestedScrollView
-            android:layout_width="match_parent"
-            android:layout_height="300dp"
-            >
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="250dp"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             android:isScrollContainer="true">
 
@@ -88,15 +85,14 @@
                 android:id="@+id/date_time"
                 />
         </LinearLayout>
-        </android.support.v4.widget.NestedScrollView>
     </FrameLayout>
 
     <FrameLayout
         android:id="@+id/cell_title_view"
         android:layout_width="match_parent"
+        android:layout_height="125dp"
         android:padding="10dp"
-        android:background="@color/DarkBlue"
-        android:layout_height="wrap_content">
+        android:background="@color/DarkBlue">
 
         <LinearLayout
             android:layout_width="match_parent"
