--- a/app/src/main/res/layout/event_list_item.xml
+++ b/app/src/main/res/layout/event_list_item.xml
@@ -37,13 +37,22 @@
             android:orientation="vertical"
             android:padding="5dp">
 
+            <me.grantland.widget.AutofitTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:id="@+id/event_txt_title"
+                android:textColor="@color/black"
+                android:maxLines="1"/>
+
             <TextView
                 android:id="@+id/event_txt_desc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Small Text"
+                android:text=""
                 android:maxLines="4"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
         </LinearLayout>
+
     </LinearLayout>
 </android.support.v7.widget.CardView>
