Domain Page Design Fixed

--- a/app/src/main/res/layout/fragment_domain.xml
+++ b/app/src/main/res/layout/fragment_domain.xml
@@ -1,11 +1,10 @@
-<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MainActivity"
-    android:background="@android:color/white"
-    android:id="@+id/swipelayout">
+    android:background="@android:color/white">
 
     <com.github.florent37.materialviewpager.MaterialViewPager
         android:id="@+id/materialViewPager"
@@ -23,7 +22,6 @@
         app:viewpager_displayToolbarWhenSwipe="true"
         app:viewpager_transparentToolbar="false"
         app:viewpager_animatedHeaderImage="true"
-
         />
 
-</android.support.v4.widget.SwipeRefreshLayout>
+</LinearLayout>
