--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -31,7 +31,8 @@
                 android:layout_height="wrap_content"
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax"
-                android:fitsSystemWindows="true"/>
+                android:fitsSystemWindows="true"
+                android:alpha="0.6"/>
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
@@ -50,7 +51,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
-        app:backgroundTint="#FF0000"
         android:src="@drawable/ic_star_border_white_24dp"
         app:layout_anchor="@id/app_bar"
         app:layout_anchorGravity="bottom|end" />
