--- a/app/src/main/res/layout/content_event.xml
+++ b/app/src/main/res/layout/content_event.xml
@@ -18,39 +18,29 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        style="@style/CardViewStyle"
-        android:layout_marginTop="10dp">
+        style="@style/CardViewStyle">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
                 <TextView
+                    android:textStyle="bold"
+                    android:layout_marginBottom="5dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:text="Description"
                     android:id="@+id/txt_desc_title" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:text="Small Text"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:id="@+id/txt_description" />
-            </LinearLayout>
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
@@ -58,39 +48,28 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            style="@style/CardViewStyle"
-            android:layout_marginTop="10dp">
+            style="@style/CardViewStyle">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
                     <TextView
+                        android:textStyle="bold"
+                        android:layout_marginBottom="5dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceMedium"
                         android:text="Rounds"
-                        android:textColor="@color/white"
+                        android:textColor="@color/black"
                         android:id="@+id/textView4" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceSmall"
                         android:text="Small Text"
-                        android:textColor="@color/white"
+                        android:textColor="@color/black"
                         android:id="@+id/txt_rounds" />
-                </LinearLayout>
             </LinearLayout>
         </android.support.v7.widget.CardView>
 
@@ -106,31 +85,23 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
                 <TextView
+                    android:textStyle="bold"
+                    android:layout_marginBottom="5dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="Date"
-                    android:textColor="@color/white"
+                    android:text="Rules"
+                    android:textColor="@color/black"
                     android:id="@+id/textView2" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceSmall"
                     android:text="Small Text"
-                    android:textColor="@color/white"
-                    android:id="@+id/txt_date" />
-            </LinearLayout>
+                    android:textColor="@color/black"
+                    android:id="@+id/txt_rules" />
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
@@ -146,31 +117,22 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
                 <TextView
+                    android:textStyle="bold"
+                    android:layout_marginBottom="5dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:text="Contact"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:id="@+id/textView3" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceSmall"
                     android:text="Small Text"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:id="@+id/txt_contact" />
-            </LinearLayout>
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
