--- a/app/src/main/res/layout/event_list_item.xml
+++ b/app/src/main/res/layout/event_list_item.xml
@@ -11,48 +11,30 @@
     android:clickable="true"
     android:id="@+id/event_card">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/event_img"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_gravity="center"
-                android:src="@drawable/aaruushlogo" />
-        </LinearLayout>
-
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
             android:layout_weight="3"
             android:orientation="vertical"
-            android:padding="5dp">
+            android:layout_margin="16dp">
 
-            <me.grantland.widget.AutofitTextView
+            <TextView
+                android:textStyle="bold"
+                android:layout_marginBottom="6dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textSize="20sp"
                 android:id="@+id/event_txt_title"
                 android:textColor="@color/black"
+                android:ellipsize="end"
                 android:maxLines="1"/>
-
             <TextView
                 android:id="@+id/event_txt_desc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text=""
+                android:ellipsize="end"
                 android:maxLines="4"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
         </LinearLayout>
-
-    </LinearLayout>
 </android.support.v7.widget.CardView>
