--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content">
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="150dp"
             android:scaleType="centerCrop"
             android:src="@drawable/home_background"/>
         <com.mikhaellopez.circularimageview.CircularImageView
@@ -27,14 +27,45 @@
             app:civ_border_color="#ff8018"
             app:civ_border_width="4dp"/>
     </FrameLayout>
-
-    <TextView
+    <android.support.v7.widget.CardView
+        android:layout_margin="6dp"
+        android:elevation="4dp"
+        app:cardCornerRadius="4dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/desc"
-        android:layout_margin="10dp"
-        android:text="@string/desc"
-        android:textColor="#000000"
-        />
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_margin="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <EditText
+                android:layout_margin="4dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/rounded_edit"
+                android:id="@+id/w_comment"
+                android:hint="Say Something...."
+                android:textColor="@android:color/black"
+                android:textSize="14sp"
+                android:padding="10dp"
+                />
+            <Button
+                android:padding="6dp"
+                android:layout_margin="4dp"
+                android:background="@color/colorPrimary"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_gravity="right"
+                android:id="@+id/pastePin"
+                android:text="Post Comment"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
+        </LinearLayout>
+
+    </android.support.v7.widget.CardView>
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </android.support.v7.widget.RecyclerView>
 
 </LinearLayout>
