--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -43,29 +43,38 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/rounded_edit"
-                android:id="@+id/w_comment"
-                android:hint="Say Something...."
+                android:id="@+id/etComment"
+                android:hint="Say Something....(100 Chars Only)"
                 android:textColor="@android:color/black"
                 android:textSize="14sp"
                 android:padding="10dp"
                 />
             <Button
+                android:textColor="@android:color/black"
                 android:padding="6dp"
-                android:layout_margin="4dp"
-                android:background="@color/colorPrimary"
+                android:layout_marginTop="4dp"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_gravity="right"
-                android:id="@+id/pastePin"
-                android:text="Post Comment"
+                android:id="@+id/btnComment"
+                android:text="Comment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 />
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
-    <android.support.v7.widget.RecyclerView
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_refresh_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-    </android.support.v7.widget.RecyclerView>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/comments"
+            android:layout_width="match_parent"
+            android:scrollbars="vertical"
+            android:layout_height="wrap_content">
+        </android.support.v7.widget.RecyclerView>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </LinearLayout>
