--- a/app/src/main/res/layout/fragment_workshops.xml
+++ b/app/src/main/res/layout/fragment_workshops.xml
@@ -11,9 +11,8 @@
     android:paddingTop="@dimen/activity_vertical_margin">
 
     <android.widget.ListView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
         android:id="@+id/list_workshop"
-        />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </LinearLayout>
