--- a/app/src/main/res/layout/workshop_list_item.xml
+++ b/app/src/main/res/layout/workshop_list_item.xml
@@ -1,123 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:padding="5dp"
-    android:clipChildren="false"
-    android:clipToPadding="false"
-    android:layout_height="wrap_content">
-
 <com.ramotion.foldingcell.FoldingCell xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:folding-cell="http://schemas.android.com/apk/res-auto"
     android:id="@+id/folding_cell"
     android:layout_width="match_parent"
-    folding-cell:backSideColor="@color/white"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    folding-cell:backSideColor="@color/bgBackSideColor">
 
-
-    <FrameLayout
+    <LinearLayout
+        android:id="@+id/cell_content_view"
         android:layout_width="match_parent"
-        android:minHeight="250dp"
         android:layout_height="wrap_content"
         android:background="@color/DarkBlue"
-        android:visibility="gone">
-        <LinearLayout
-            android:layout_width="match_parent"
+        android:minHeight="250dp"
+        android:orientation="vertical"
+        android:visibility="gone"
+        android:paddingBottom="15dp"
+        android:paddingLeft="12dp"
+        android:paddingRight="12dp"
+        android:paddingTop="7dp"
+        >
+
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:text="Description: "
+            android:textAppearance="?android:textAppearanceLarge"
+            android:textColor="@color/white" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:textAppearance="?android:textAppearanceLarge"
-                android:text="Description: "
-                />
+        <TextView
+            android:id="@+id/desc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:textAppearanceMedium"
+            android:textColor="@color/white" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:textAppearance="?android:textAppearanceMedium"
-                android:id="@+id/desc"
-                />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Cost: "
+            android:textAppearance="?android:textAppearanceLarge"
+            android:textColor="@color/white" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:textAppearance="?android:textAppearanceLarge"
-                android:text="Cost: "
-                />
+        <TextView
+            android:id="@+id/cost"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:textAppearanceMedium"
+            android:textColor="@color/white" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:textAppearance="?android:textAppearanceMedium"
-                android:id="@+id/cost"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:textAppearance="?android:textAppearanceLarge"
-                android:text="Contact: "
-                />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Contact: "
+            android:textAppearance="?android:textAppearanceLarge"
+            android:textColor="@color/white" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:textAppearance="?android:textAppearanceMedium"
-                android:id="@+id/company"
-                />
+        <TextView
+            android:id="@+id/company"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:textAppearanceMedium"
+            android:textColor="@color/white" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:textAppearance="?android:textAppearanceMedium"
-                android:id="@+id/team"
-                />
+        <TextView
+            android:id="@+id/team"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:textAppearanceMedium"
+            android:textColor="@color/white" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:textAppearance="?android:textAppearanceMedium"
-                android:id="@+id/date_time"
-                />
-        </LinearLayout>
-    </FrameLayout>
+        <TextView
+            android:id="@+id/date_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:textAppearanceMedium"
+            android:textColor="@color/white" />
+    </LinearLayout>
 
-    <FrameLayout
+
+    <LinearLayout
+        android:id="@+id/cell_title_view"
         android:layout_width="match_parent"
         android:layout_height="125dp"
-        android:background="@color/DarkBlue">
+        android:background="@color/DarkBlue"
+        android:padding="5dp"
+        >
 
-        <LinearLayout
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:scaleType="centerCrop"
+            android:src="@drawable/about_us" />
+
+        <TextView
+            android:id="@+id/title"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            >
+            android:layout_height="100dp"
+            android:textAppearance="?android:textAppearanceMedium"
+            android:text="This is the title of the event"
+            android:textColor="@color/white" />
+    </LinearLayout>
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:scaleType="centerCrop"
-                android:src="@drawable/about_us"
-                />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:text="This is the title of the event"
-                android:id="@+id/title"
-                android:textColor="@color/white"
-                />
-        </LinearLayout>
-
-    </FrameLayout>
 
 </com.ramotion.foldingcell.FoldingCell>
-
-</RelativeLayout>
