--- a/app/src/main/res/layout/view_flipper_list_item.xml
+++ b/app/src/main/res/layout/view_flipper_list_item.xml
@@ -1,36 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-
-    >
-<LinearLayout
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:layout_weight="1">
+    android:layout_height="match_parent">
     <ImageView
         android:id="@+id/first"
         xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="0dp"
         android:layout_weight="1"
         android:contentDescription="left image"
         android:layout_height="wrap_content"
-        android:scaleType="centerCrop"
-        android:layout_width="match_parent"
-        android:src="@drawable/com_facebook_profile_picture_blank_square" />
-</LinearLayout>
+        android:scaleType="centerCrop" />
 
-<LinearLayout
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:layout_weight="1">
+    <LinearLayout
+        android:layout_width="1dp"
+        android:layout_weight="0"
+        android:background="#000000"
+        android:layout_height="fill_parent"/>
+
     <ImageView
         android:id="@+id/second"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_weight="1"
         android:contentDescription="right image"
         android:layout_height="wrap_content"
-        android:scaleType="centerCrop"
-        android:src="@drawable/com_facebook_profile_picture_blank_square" />
-</LinearLayout>
+        android:scaleType="centerCrop" />
 
 </LinearLayout>
