--- a/app/src/main/res/layout/fragment_workshops.xml
+++ b/app/src/main/res/layout/fragment_workshops.xml
@@ -5,10 +5,7 @@
     android:clipChildren="false"
     android:clipToPadding="false"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    android:background="#eee">
 
     <android.widget.ListView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/list_workshop"
